AC_INIT(art_misc.h)
AM_CONFIG_HEADER(config.h)

LIBART_MAJOR_VERSION=0
LIBART_MINOR_VERSION=0
LIBART_MICRO_VERSION=0
LIBART_VERSION=$LIBART_MAJOR_VERSION.$LIBART_MINOR_VERSION.$LIBART_MICRO_VERSION

AC_SUBST(LIBART_MAJOR_VERSION)
AC_SUBST(LIBART_MINOR_VERSION)
AC_SUBST(LIBART_MICRO_VERSION)
AC_SUBST(LIBART_VERSION)

VERSION=$LIBART_VERSION

AM_INIT_AUTOMAKE(libart_lgpl, $VERSION)

AC_PROG_CC
AC_PROG_CPP
AM_PROG_LIBTOOL

AM_MAINTAINER_MODE

LIBART_LIBS=$LIBS
AC_SUBST(LIBART_LIBS)

AC_OUTPUT([
Makefile
libart-config], [case "$CONFIG_FILES" in *libart-config*) chmod +x libart-config;; esac])
